backgorund color to contact form

--- a/appointment-scheduler/public/index.html
+++ b/appointment-scheduler/public/index.html
@@ -23,6 +23,10 @@
     <!-- style has an ID so we can retrieve it for exporting html and css via a script reading the innerHTML of the style -->
 
     <style>
+      .bg-1 {
+        background: #2d2d30;
+        color: #bdbdbd;
+      }
       .container {
         padding: 80px 120px;
       }
